Update README: Communicator encryption, module scripts, integrity system